Noteworthy changes in version 0.6.10
------------------------------------------------


Noteworthy changes in version 0.6.9 (2004-12-22)
------------------------------------------------

 * Ported to W32 based systems.


Noteworthy changes in version 0.6.8 (2004-11-25)
------------------------------------------------

 * assuan_write_status does now return an error code.

 * Fixes for C89 compatibility and some first takes on a W32 port.


Noteworthy changes in version 0.6.7 (2004-09-27)
------------------------------------------------

 * Minor build fixes.


Noteworthy changes in version 0.6.6 (2004-06-08)
------------------------------------------------

 * assuan_set_hello_line may now take a multi line argument where the
   first lines are send as comment lines and the last one as a OK
   line.


Noteworthy changes in version 0.6.5 (2004-04-29)
------------------------------------------------

 * Pass the client's pid to a pipe server.


Noteworthy changes in version 0.6.4 (2004-02-20)
------------------------------------------------

 * Will now also build on systems not providing funopen or
   fopencookie.

 * Some smaller build fixes.


Noteworthy changes in version 0.6.3 (2004-01-29)
------------------------------------------------

 * Fixed a data corruption bug in assuan_get_data_fp.

 * New function assuan_pipe_connect2.


Noteworthy changes in version 0.6.2 (2003-12-18)
------------------------------------------------

 * New function assuan_set_assuan_log_prefix to store a log prefix to
   be used when no context is available. The existing function
   assuan_get_assuan_log_context is not anymore declared as user
   overridable.

 * Documentation cleanups. 

Noteworthy changes in version 0.6.1 (2003-11-17)
------------------------------------------------

 * Fixed a bug in assuan_inquire which led to an Invalid_Value error
   for large inquiry parameters.

 * Fixed a bug in the client socket connect code.

