@@ -1,5 +1,7 @@
 
 Marc Mutz                 mutz at kde.org
 Michael Nottebrock        michaelnottebrock at gmx.net
+Ville Skyttä              ville.skytta@iki.fi
+
 
 
