@@ -1,6 +1,10 @@
 Noteworthy changes in version 0.6.10
 ------------------------------------------------
 
+ * New functions assuan_get_flag and assuan_set_flag.
+
+ * Add flag ASSUAN_NO_WAITPID.
+
 
 Noteworthy changes in version 0.6.9 (2004-12-22)
 ------------------------------------------------
